kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-test
  labels:
    app.kubernetes.io/part-of: flask-stack
